--- a/build.gradle
+++ b/build.gradle
@@ -1,58 +1,34 @@
 buildscript {
     repositories {
-        jcenter()
-        maven {
-            url "https://plugins.gradle.org/m2/"
-        }
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.bmuschko:gradle-cargo-plugin:2.2.3'
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:2.0.5.RELEASE")
     }
 }
 
-plugins {
-    id 'war'
-    id 'groovy'
-    id 'java'
-    id "com.mkring.wildlydeplyplugin.deploy-wildfly-plugin" version "0.2.4"
-    id 'idea'
+apply plugin: 'java'
+apply plugin: 'eclipse'
+apply plugin: 'idea'
+apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
+
+bootJar {
+    baseName = 'cityGeneratorAPI'
+    version =  '0.1.0'
 }
 
 repositories {
+    mavenCentral()
     jcenter()
-    maven {
-        url "https://plugins.gradle.org/m2/"
-    }
 }
 
-apply plugin: 'com.bmuschko.cargo'
-
-cargo {
-    containerId = 'wildfly10x'
-    port = 8080
-
-    deployable{
-        file = file('build/libs/CityGenerator.war')
-        context = 'citygenerator'
-    }
-
-    local{
-        homeDir = file('/home/roughtomato/wildfly10')
-    }
-}
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 dependencies {
-    compile "gradle.plugin.com.mkring.wildlydeplyplugin:wildfly-deploy-gradle-plugin:0.2.4"
-    providedCompile 'javax.servlet:javax.servlet-api:3.1.0'
-    testCompile 'junit:junit:4.12'
-    testCompile 'org.mockito:mockito-core:2.7.19'
-    testCompile 'io.github.bonigarcia:webdrivermanager:1.6.1'
-    testCompile 'org.seleniumhq.selenium:selenium-java:3.3.1'
-    compile group: 'javax.inject', name: 'javax.inject', version: '1'
-    testCompile group: 'javax.inject', name: 'javax.inject', version: '1'
-    def cargoVersion = '1.5.0'
-    cargo "org.codehaus.cargo:cargo-core-uberjar:$cargoVersion",
-            "org.codehaus.cargo:cargo-ant:$cargoVersion"
+    compile("org.springframework.boot:spring-boot-starter-web")
+    testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile('junit:junit:4.12')
+    testCompile('org.mockito:mockito-core:1.+')
 }
-
-apply plugin: "com.mkring.wildlydeplyplugin.deploy-wildfly-plugin"
