--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,16 @@ bootJar {
     version =  '0.1.0'
 }
 
+sourceSets.main {
+    java {
+        srcDir 'src/main/java'
+    }
+    resources {
+        srcDirs = ['src/main/java', 'src/main/resources']
+        exclude "**/*.java"
+    }
+}
+
 repositories {
     mavenCentral()
 }
@@ -27,8 +37,9 @@ targetCompatibility = 1.8
 
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
-    compile('com.qiniu:qiniu-java-sdk:7.2.1')
-    compile('commons-io:commons-io:2.6')
+    compile("org.springframework.boot:spring-boot-starter-data-jpa")
+    compile('mysql:mysql-connector-java')
+    compile("com.h2database:h2")
     compile('org.apache.commons:commons-lang3:3.8')
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile('junit:junit:4.12')
