--- a/build.gradle
+++ b/build.gradle
@@ -53,4 +53,6 @@ dependencies {
     compile('org.apache.commons:commons-lang3:3.8')
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile('junit:junit:4.12')
+    testCompile("com.h2database:h2")
+
 }
