--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ script:
         - ./gradlew test
         - ./gradlew jacocoTestReport
         - ./gradlew bootJar
+        - bash <(curl -s https://codecov.io/bash)
 before_cache:
           - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
           - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
