--- a/build.gradle
+++ b/build.gradle
@@ -43,23 +43,13 @@ sourceSets.test {
     }
 }
 
-task codeCoverageReport(type: JacocoReport) {
-    executionData fileTree(project.rootDir.absolutePath).include("**/build/jacoco/*.exec")
-
-    subprojects.each {
-        sourceSets it.sourceSets.main
-    }
-
+jacocoTestReport {
     reports {
         xml.enabled true
-	xml.destination "${buildDir}/reports/jacoco/report.xml"
+	xml.destination file {"${buildDir}/jacoco"}
         html.enabled false
         csv.enabled false
     }
-}
-
-codeCoverageReport.dependsOn {
-    subprojects*.test
 }
 
 repositories {
