Trying to fix jacoco error in travis build.

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ jdk:
 script:
         - ./gradlew test
         - ./gradlew jacocoTestReport
+        - mkdir -p build/reports/jacoco/
         - bash <(curl -s https://codecov.io/bash)
         - ./gradlew bootJar
 before_cache:
