Fixed directory issue with jacoco and travis.

--- a/build.gradle
+++ b/build.gradle
@@ -46,7 +46,7 @@ sourceSets.test {
 jacocoTestReport {
     reports {
         xml.enabled true
-	xml.destination file {"${buildDir}/reports/jacoco/"}
+	xml.destination file {"${buildDir}/reports/jacoco/report.xml"}
         html.enabled false
         csv.enabled false
     }
