--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,26 @@
 buildscript {
+    ext {
+	kotlinVersion = '1.2.41'
+    }
     repositories {
         mavenCentral()
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:2.0.5.RELEASE")
+	classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
+	classpath("org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}")
     }
 }
 
+apply plugin: 'kotlin'
+apply plugin: 'kotlin-spring'
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'jacoco'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply from: "$rootDir/integTest.gradle"
 
 bootJar {
     baseName = 'generator-service'
@@ -59,9 +67,31 @@ repositories {
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
+compileKotlin {
+  kotlinOptions {
+    freeCompilerArgs = ["-Xjsr305=strict"]
+    jvmTarget = "1.8"
+  }
+}
+
+compileTestKotlin {
+  kotlinOptions {
+    freeCompilerArgs = ["-Xjsr305=strict"]
+    jvmTarget = "1.8"
+  }
+}
+
+test {
+	useJUnitPlatform()
+}
+
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
+    compile('org.springframework.boot:spring-boot-starter-mustache')
+    compile('com.fasterxml.jackson.module:jackson-module-kotlin')
+    compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
+    compile("org.jetbrains.kotlin:kotlin-reflect") 
     compile("com.google.guava:guava:27.0.1-jre")
     compile("mysql:mysql-connector-java")
     compile("com.h2database:h2")
@@ -69,5 +99,6 @@ dependencies {
     testCompile("org.springframework.boot:spring-boot-starter-test")
     testCompile("junit:junit:4.12")
     testCompile("com.h2database:h2")
-
+    testImplementation('org.junit.jupiter:junit-jupiter-api')
+    testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine')
 }
