--- a/build.gradle
+++ b/build.gradle
@@ -66,6 +66,7 @@ dependencies {
     compile("mysql:mysql-connector-java")
     compile("com.h2database:h2")
     compile("org.apache.commons:commons-lang3:3.8")
+    compile("de.alsclo:voronoi-java:1.0")
     testCompile("org.springframework.boot:spring-boot-starter-test")
     testCompile("junit:junit:4.12")
     testCompile("com.h2database:h2")
