--- a/build.gradle
+++ b/build.gradle
@@ -67,8 +67,9 @@ dependencies {
     compile("com.h2database:h2")
     compile("org.apache.commons:commons-lang3:3.8")
     compile("de.alsclo:voronoi-java:1.0")
+    compile("dom4j:dom4j:1.6.1")
     testCompile("org.springframework.boot:spring-boot-starter-test")
     testCompile("junit:junit:4.12")
     testCompile("com.h2database:h2")
-
+    testCompile("dom4j:dom4j:1.6.1")
 }
