Updated package.json, updated Readme.md.

--- a/src/package.json
+++ b/src/package.json
@@ -6,10 +6,14 @@
   "repository": "https://github.com/RoughTomato/CityGenerator",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "d3-delaunay": "^4.1.5",
     "express": "^4.16.4",
+    "foswig": "^1.1.1",
     "markov-chain-js": "^1.0.2",
     "mongoose": "^5.4.22",
-    "node": "^11.12.0"
+    "node": "^11.12.0",
+    "voronoi": "^1.0.0",
+    "voronoi-diagram": "^1.0.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
